# refua-schema

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/refua_schema/: __init__.py  io.py  models.py  sqlmodel_support.py
tests/: test_models.py  test_public_api.py  test_sqlmodel.py
