[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refua-schema"
version = "0.7.2"
description = "Portfolio-to-drug object schema for the Refua drug discovery ecosystem."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "JJ Ben-Joseph", email = "jj@tensorspace.ai"}]
keywords = [
  "refua",
  "drug discovery",
  "schema",
  "portfolio",
  "ontology",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.9.0",
  "pyyaml>=6.0.1",
  "refua>=0.7.2",
  "refua-clinical>=0.8.0",
  "refua-preclinical>=0.7.1",
  "refua-regulatory>=0.7.1",
]

[project.urls]
Homepage = "https://agentcures.com/"
Repository = "https://github.com/agentcures/refua"
Documentation = "https://github.com/agentcures/refua#readme"
Issues = "https://github.com/agentcures/refua/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=4.5.1",
  "build>=1.2.2",
  "twine>=6.1.0",
]
sqlmodel = [
  "sqlmodel>=0.0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "../refua/src",
  "../refua-clinical/src",
  "../refua-preclinical/src",
  "../refua-regulatory/src",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
